--- a/MILESTONE 2/css/style.css
+++ b/MILESTONE 2/css/style.css
@@ -27,7 +27,6 @@
     height: 100%;
 }
 .mini-slider{
-    display: none;
     width: 20%;
     height: 100%;
 }
@@ -67,4 +66,11 @@
 }
 .item.active{
     display: block;
+}
+
+
+.mini-slider img{
+    width: 100%;
+    height: 20%;
+    object-fit: cover;
 }
