--- a/MILESTONE 3/css/style.css
+++ b/MILESTONE 3/css/style.css
@@ -9,6 +9,10 @@
     border: 1px solid black;
 }
 
+.hide{
+    display: none;
+}
+
 .main-wrapper{
     height: 100vh;
     display: flex;
@@ -27,7 +31,7 @@
     height: 100%;
 }
 .mini-slider{
-    display: none;
+    /* display: none; */
     width: 20%;
     height: 100%;
 }
@@ -68,3 +72,20 @@
 .item.active{
     display: block;
 }
+
+
+/* BONUS */
+
+/* .mini-slider img{
+    width: 100%;
+    height: 20%;
+    object-fit: cover;
+    vertical-align: middle;
+}
+
+.mini-item{
+    opacity: .7;
+}
+.mini-item.active{
+    opacity: 1;
+} */
